testdata/baselines/reference/submodule/compiler/taggedTemplatesWithIncompleteNoSubstitutionTemplate2.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2318: Cannot find global type 'TemplateStringsArray'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
taggedTemplatesWithIncompleteNoSubstitutionTemplate2.ts(1,15): error TS2304: Cannot find name 'TemplateStringsArray'.
taggedTemplatesWithIncompleteNoSubstitutionTemplate2.ts(5,1): error TS2554: Expected 3 arguments, but got 1.
taggedTemplatesWithIncompleteNoSubstitutionTemplate2.ts(5,4): error TS1160: Unterminated template literal.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2318: Cannot find global type 'TemplateStringsArray'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== taggedTemplatesWithIncompleteNoSubstitutionTemplate2.ts (3 errors) ====
    function f(x: TemplateStringsArray, y: string, z: string) {
                  ~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'TemplateStringsArray'.
    }
    
    // Incomplete call, not enough parameters, at EOF.
    f `
    ~~~
!!! error TS2554: Expected 3 arguments, but got 1.
!!! related TS6210 taggedTemplatesWithIncompleteNoSubstitutionTemplate2.ts:1:37: An argument for 'y' was not provided.
       
!!! error TS1160: Unterminated template literal.